Initial 2nd Push

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_RAPID_API_ARTICLE = 2b6a74e2c0msh86337724550a7d8p14613ajsn4fe6617716f2
+VITE_RAPID_API_ARTICLE_KEY = 2b6a74e2c0msh86337724550a7d8p14613ajsn4fe6617716f2
